--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,247 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Afacad&family=Roboto:ital,wght@0,300;1,300&display=swap"
+      rel="stylesheet"
+    />
     <title>Your Website</title>
     <style>
-        *{
-            font-family: 'Afacad', sans-serif;
-            /* margin: 0 ;
+      * {
+        font-family: "Afacad", sans-serif;
+        /* margin: 0 ;
             padding:  0; */
-            box-sizing:  border-box;
-        }
-        body{
-            background: #10202b;
-            margin: 0px 40px;
-            padding: 0;
-        }
-        .icon ion-icon {
-            font-size: 100px;
-            cursor: pointer;
-            color: #fff;
-        }
-        #buttonContainer {
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 100px;
-        }
+        box-sizing: border-box;
+      }
+      body {
+        background: #10202b;
+        margin: 0px 40px;
+        padding: 0;
+      }
+      .icon ion-icon {
+        font-size: 100px;
+        cursor: pointer;
+        color: #fff;
+      }
+      #buttonContainer {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 100px;
+      }
 
-        #buttonContainer {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        header{
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 100%;
-            padding: 20px 100px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 99;
-            margin-bottom: 50px;
-            font-size: 20px;
-        }
-        .icon ion-icon {
-            font-size: 100px;
-            cursor: pointer;
-            color: #fff;
-        }
-        .navigation a {
-            position: relative;
-            font-size: 1.1em;
-            text-decoration: none;
-            font-weight: 500;
-            margin-left: 40px;
-            color: white;
-        }
-        .navigation a::after{
-            content: '';
-            position: absolute;
-            left : 0;
-            bottom:-6px;
-            width: 100%;
-            height: 3px;
-            background: white;
-            border-radius: 5px;
-            transform: scaleX(0);
-            transition: transform .5s;
-        }
-        .navigation a:hover:after{
-            transform: scaleX(1);
-        }
-        .navigation .btnLogi-popup{
-            width: 130px;
-            height: 50px;
-            background: transparent;
-            border: 2px solid ;
-            outline: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 1.1em;
-            color: white;
-            font-weight: 500;
-            margin-left: 40px;
-            transition: .5s;
-        }
-        .navigation .btnLogi-popup:hover{
-            background: white;
-            color:#161616;
-        }
-        #buttoncontainer {
-            margin: auto;
-            width: 20%;
-            padding: 10px;
-            text-align: center;
-            margin-top: 200px;
-            cursor: pointer; 
-            width: 250px;
-        }
+      #buttonContainer {
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+      header {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 20px 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 99;
+        margin-bottom: 50px;
+        font-size: 20px;
+      }
+      .icon ion-icon {
+        font-size: 100px;
+        cursor: pointer;
+        color: #fff;
+      }
+      .navigation a {
+        position: relative;
+        font-size: 1.1em;
+        text-decoration: none;
+        font-weight: 500;
+        margin-left: 40px;
+        color: white;
+      }
+      .navigation a::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -6px;
+        width: 100%;
+        height: 3px;
+        background: white;
+        border-radius: 5px;
+        transform: scaleX(0);
+        transition: transform 0.5s;
+      }
+      .navigation a:hover:after {
+        transform: scaleX(1);
+      }
+      .navigation .btnLogi-popup {
+        width: 130px;
+        height: 50px;
+        background: transparent;
+        border: 2px solid;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1.1em;
+        color: white;
+        font-weight: 500;
+        margin-left: 40px;
+        transition: 0.5s;
+      }
+      .navigation .btnLogi-popup:hover {
+        background: white;
+        color: #161616;
+      }
+      #buttoncontainer {
+        margin: auto;
+        width: 20%;
+        padding: 10px;
+        text-align: center;
+        margin-top: 200px;
+        cursor: pointer;
+        width: 250px;
+      }
 
-        #buttonContainer {
-            color: #fff;
-            font-weight: bold;
-            font-size: 30px;
-            justify-content: center;
-            margin: 0; 
-            
-        }
+      #buttonContainer {
+        color: #fff;
+        font-weight: bold;
+        font-size: 30px;
+        justify-content: center;
+        margin: 0;
+      }
 
-        /* #bcontainer{
+      /* #bcontainer{
             text-decoration: none;
         } */
-        #buttonContainer button {
-            position: relative;
-            background: #fff;
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            border: none;
-            letter-spacing: 0.1rem;
-            font-size: 1rem;
-            padding: 1rem 3rem;
-            transition: 0.2s;
-            cursor: pointer;
-        }
-        
-        #buttonContainer button:hover {
-            letter-spacing: 0.2rem;
-            padding: 1.1rem 3.1rem;
-            background: var(--clr);
-            color: var(--clr);
-            /* box-shadow: 0 0 35px var(--clr); */
-            animation: box 3s infinite;
-        }
-        
-        #buttonContainer button::before {
-            content: "";
-            position: absolute;
-            inset: 2px;
-            background: #10202b;
-        }
-        
-        #buttonContainer button span {
-            position: relative;
-            z-index: 1;
-        }
-        #buttonContainer button i {
-            position: absolute;
-            inset: 0;
-            display: block;
-        }
-        
-        #buttonContainer button i::before {
-            content: "";
-            position: absolute;
-            width: 10px;
-            height: 2px;
-            left: 80%;
-            top: -2px;
-            border: 2px solid var(--clr);
-            background: #272822;
-            transition: 0.2s;
-        }
-        
-        #buttonContainer button:hover i::before {
-            width: 15px;
-            left: 20%;
-            animation: move 3s infinite;
-        }
-        
-        #buttonContainer button i::after {
-            content: "";
-            position: absolute;
-            width: 10px;
-            height: 2px;
-            left: 20%;
-            bottom: -2px;
-            border: 2px solid var(--clr);
-            background: #272822;
-            transition: 0.2s;
-        }
-        
-        #buttonContainer button:hover i::after {
-            width: 15px;
-            left: 80%;
-            animation: move 3s infinite;
-        }
-        
-        @keyframes move {
-            0% {
-            transform: translateX(0);
-            }
-            50% {
-            transform: translateX(5px);
-            }
-            100% {
-            transform: translateX(0);
-            }
-        }
-        
-        @keyframes box {
-            0% {
-            box-shadow: #27272c;
-            }
-            50% {
-            box-shadow: 0 0 25px var(--clr);
-            }
-            100% {
-            box-shadow: #27272c;
-            }
-        }
-        </style>
-</head>
-<body>
-    <header>
-        <span class="icon"><a href="{{ url_for('index') }}"><ion-icon name="logo-web-component"></ion-icon></a></span>
-        <nav class="navigation">
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('index2') }}">Quiz</a>
-            <a href='https://drive.google.com/file/d/17K02Wa7HWubtT-mrMHG8-JK6AwNWPsz5/view?usp=sharing' target="_blank">Project Proposal</a>
-            <a href='#' target="_blank">Project Report</a>
-        </nav>
-    </header>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<div id="buttonContainer">
-    <button class="actionButton" style="--clr:#0FF0FC" onclick="goToPage('quiz')"><span>TGAT</span><i></i></button>
-    <button class="actionButton2" style="--clr:#0FF0FC" onclick="goToPage('quiz2')"><span>Math1</span><i></i></button>
-</div>
-<script>
-    function goToPage(url) {
-        window.location.href = url;
-    }
-</script>
+      #buttonContainer button {
+        position: relative;
+        background: #fff;
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        border: none;
+        letter-spacing: 0.1rem;
+        font-size: 1rem;
+        padding: 1rem 3rem;
+        transition: 0.2s;
+        cursor: pointer;
+      }
 
-</body>
+      #buttonContainer button:hover {
+        letter-spacing: 0.2rem;
+        padding: 1.1rem 3.1rem;
+        background: var(--clr);
+        color: var(--clr);
+        /* box-shadow: 0 0 35px var(--clr); */
+        animation: box 3s infinite;
+      }
+
+      #buttonContainer button::before {
+        content: "";
+        position: absolute;
+        inset: 2px;
+        background: #10202b;
+      }
+
+      #buttonContainer button span {
+        position: relative;
+        z-index: 1;
+      }
+      #buttonContainer button i {
+        position: absolute;
+        inset: 0;
+        display: block;
+      }
+
+      #buttonContainer button i::before {
+        content: "";
+        position: absolute;
+        width: 10px;
+        height: 2px;
+        left: 80%;
+        top: -2px;
+        border: 2px solid var(--clr);
+        background: #272822;
+        transition: 0.2s;
+      }
+
+      #buttonContainer button:hover i::before {
+        width: 15px;
+        left: 20%;
+        animation: move 3s infinite;
+      }
+
+      #buttonContainer button i::after {
+        content: "";
+        position: absolute;
+        width: 10px;
+        height: 2px;
+        left: 20%;
+        bottom: -2px;
+        border: 2px solid var(--clr);
+        background: #272822;
+        transition: 0.2s;
+      }
+
+      #buttonContainer button:hover i::after {
+        width: 15px;
+        left: 80%;
+        animation: move 3s infinite;
+      }
+
+      @keyframes move {
+        0% {
+          transform: translateX(0);
+        }
+        50% {
+          transform: translateX(5px);
+        }
+        100% {
+          transform: translateX(0);
+        }
+      }
+
+      @keyframes box {
+        0% {
+          box-shadow: #27272c;
+        }
+        50% {
+          box-shadow: 0 0 25px var(--clr);
+        }
+        100% {
+          box-shadow: #27272c;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <span class="icon"
+        ><a href="{{ url_for('index') }}"
+          ><ion-icon name="logo-web-component"></ion-icon></a
+      ></span>
+      <nav class="navigation">
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('index2') }}">Quiz</a>
+        <!-- <a href='https://drive.google.com/file/d/17K02Wa7HWubtT-mrMHG8-JK6AwNWPsz5/view?usp=sharing' target="_blank">Project Proposal</a>
+            <a href='#' target="_blank">Project Report</a> -->
+      </nav>
+    </header>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <div id="buttonContainer">
+      <button
+        class="actionButton"
+        style="--clr: #0ff0fc"
+        onclick="goToPage('quiz')"
+      >
+        <span>TGAT</span><i></i>
+      </button>
+      <button
+        class="actionButton2"
+        style="--clr: #0ff0fc"
+        onclick="goToPage('quiz2')"
+      >
+        <span>Math1</span><i></i>
+      </button>
+    </div>
+    <script>
+      function goToPage(url) {
+        window.location.href = url;
+      }
+    </script>
+  </body>
 </html>
